ajustes pagina y circuitos

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
   
           <!-- 37 KM -->
           <div class="col-6 col-md-4 text-center py-3">
-            <button type="button" class="pb-2" data-toggle="modal" data-target="#">
+            <button type="button" class="pb-2" data-toggle="modal" data-target="#circuit_37k">
               <small>dificultad: avanzada</small><br>
               <div class="span-hero d-flex justify-content-center align-items-center">
                 <strong>37</strong><small>K</small>
@@ -389,13 +389,15 @@
               </span>
             </button>
             <div class="modal fade" id="circuit_37k" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog" role="document">
+              <div class="modal-dialog modal-xl" role="document">
                 <div class="modal-content bg-green-dark-primary">
                   <div class="modal-body text-light pt-5">
-                    <img src="assets/img/circuits/37k_futangue_ruta-900-v2.jpg" alt="" class="img-fluid" width="900" height="900">
-                    <a href="assets/img/circuits/37k_futangue_ruta-1500-v2.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
+                    <img src="assets/img/circuits/2025/FC25 - CIRCUITO 37K.png" alt="Circuito 37K" class="img-fluid" width="1000" height="1000">
+                    <br>
+                    <a href="assets/img/circuits/2025/FC25 - CIRCUITO 37K.png" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> 
+                    <!--
                     <a href="assets/gpx/37k_FUTANGUE+CHALLENGE+2024_VF22.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
-                    <a href="assets/kmz/37k_FUTANGUE_CHALLENGE_2024_VF22.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a>
+                    <a href="assets/kmz/37k_FUTANGUE_CHALLENGE_2024_VF22.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a> -->
                   </div>
                   <div class="modal-footer border-top-0">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -408,7 +410,7 @@
   
           <!-- 26 KM -->
           <div class="col-6 col-md-4 text-center py-3">
-            <button type="button" class="pb-2" data-toggle="modal" data-target="#">
+            <button type="button" class="pb-2" data-toggle="modal" data-target="#circuit_26k">
               <small>dificultad: media</small><br>
               <div class="span-hero d-flex justify-content-center align-items-center">
                 <strong>26</strong><small>K</small>
@@ -419,14 +421,14 @@
                 <strong class="distance-mas">+</strong>
               </span>  
             </button>
-            <div class="modal fade" id="circuit_32k" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog" role="document">
+            <div class="modal fade" id="circuit_26k" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog modal-xl" role="document">
                 <div class="modal-content bg-green-dark-primary">
                   <div class="modal-body">
-                    <img src="assets/img/circuits/32k_futangue_ruta-900-v2.jpg" alt="" class="img-fluid" width="900" height="900">
-                    <a href="assets/img/circuits/32k_futangue_ruta-1500-v2.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
-                    <a href="assets/gpx/32K Futangue Challenge 2024.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
-                    <a href="assets/kmz/32K_Futangue_Challenge_2024.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a>
+                    <img src="assets/img/circuits/2025/FC25 - CIRCUITO 26K.png" alt="" class="img-fluid" width="900" height="900"><br>
+                    <a href="assets/img/circuits/2025/FC25 - CIRCUITO 26K.png" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
+                    <!-- <a href="assets/gpx/32K Futangue Challenge 2024.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
+                    <a href="assets/kmz/32K_Futangue_Challenge_2024.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a> -->
                   </div>
                   <div class="modal-footer border-top-0">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -439,7 +441,7 @@
   
           <!-- 18 KM -->
           <div class="col-6 col-md-4 text-center py-3">
-            <button type="button" class="pb-2" data-toggle="modal" data-target="#">
+            <button type="button" class="pb-2" data-toggle="modal" data-target="#circuit_18k">
               <small>dificultad: baja</small><br>
               <div class="span-hero d-flex justify-content-center align-items-center">
                 <strong class="py-0">18</strong><small>K</small>
@@ -450,14 +452,14 @@
                 <strong class="distance-mas">+</strong>
               </span>  
             </button>
-            <div class="modal fade" id="circuit_21k" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog" role="document">
+            <div class="modal fade" id="circuit_18k" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog modal-xl" role="document">
                 <div class="modal-content bg-green-dark-primary">
                   <div class="modal-body">
-                    <img src="assets/img/circuits/21k_futangue_ruta-900-v2.jpg" alt="" class="img-fluid" width="900" height="900">
-                    <a href="assets/img/circuits/21k_futangue_ruta-1500-v2.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
-                    <a href="assets/gpx/21K_Futangue_Challenge_2024.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
-                    <a href="assets/kmz/21K_Futangue_Challenge_2024.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a>
+                    <img src="assets/img/circuits/2025/FC25 - CIRCUITO 18K.png" alt="" class="img-fluid" width="900" height="900"><br>
+                    <a href="assets/img/circuits/2025/FC25 - CIRCUITO 18K.png" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
+                    <!-- <a href="assets/gpx/21K_Futangue_Challenge_2024.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
+                    <a href="assets/kmz/21K_Futangue_Challenge_2024.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a> -->
                   </div>
                   <div class="modal-footer border-top-0">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -479,7 +481,7 @@
 
         <!-- KV KM -->
         <div class="col-6 col-md-4 text-center py-3">
-          <button type="button" class="pb-2" data-toggle="modal" data-target="#">
+          <button type="button" class="pb-2" data-toggle="modal" data-target="#circuit_KV">
             <small>dificultad: avanzada</small><br>
             <div class="span-hero d-flex justify-content-center align-items-center">
               <strong>KV</strong>
@@ -490,14 +492,14 @@
               <strong class="distance-mas">+</strong>
             </span>
           </button>
-          <div class="modal fade" id="circuit_60k" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
+          <div class="modal fade" id="circuit_KV" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
               <div class="modal-content bg-green-dark-primary">
                 <div class="modal-body text-light pt-5">
-                  <img src="assets/img/circuits/60k_futangue_ruta-900-v2.jpg" alt="" class="img-fluid" width="900" height="900">
-                  <a href="assets/img/circuits/60k_futangue_ruta-1500-v2.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
-                  <a href="assets/gpx/60k_FUTANGUE+CHALLENGE+2024_VF22.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
-                  <a href="assets/kmz/60k_FUTANGUE_CHALLENGE_2024_VF22.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a>
+                  <img src="assets/img/circuits/2025/FC25 - CIRCUITO KV.png" alt="" class="img-fluid" width="900" height="900"><br>
+                  <a href="assets/img/circuits/2025/FC25 - CIRCUITO KV.png" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
+                  <!-- <a href="assets/gpx/60k_FUTANGUE+CHALLENGE+2024_VF22.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
+                  <a href="assets/kmz/60k_FUTANGUE_CHALLENGE_2024_VF22.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a> -->
                 </div>
                 <div class="modal-footer border-top-0">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -510,7 +512,7 @@
 
         <!-- 10 KM -->
         <div class="col-6 col-md-4 text-center py-3">
-          <button type="button" class="pb-2" data-toggle="modal" data-target="#">
+          <button type="button" class="pb-2" data-toggle="modal" data-target="#circuit_10k">
             <small>dificultad: baja</small><br>
             <div class="span-hero d-flex justify-content-center align-items-center">
               <strong>10</strong><small>K</small>
@@ -519,14 +521,14 @@
               <strong>CROSS</strong>
             </span>  
           </button>
-          <div class="modal fade" id="circuit_32k" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
+          <div class="modal fade" id="circuit_10k" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
               <div class="modal-content bg-green-dark-primary">
                 <div class="modal-body">
-                  <img src="assets/img/circuits/32k_futangue_ruta-900-v2.jpg" alt="" class="img-fluid" width="900" height="900">
-                  <a href="assets/img/circuits/32k_futangue_ruta-1500-v2.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
-                  <a href="assets/gpx/32K Futangue Challenge 2024.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
-                  <a href="assets/kmz/32K_Futangue_Challenge_2024.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a>
+                  <img src="assets/img/circuits/2025/FC25 - CIRCUITO 10K.png" alt="" class="img-fluid" width="900" height="900"><br>
+                  <a href="assets/img/circuits/2025/FC25 - CIRCUITO 10K.png" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
+                  <!-- <a href="assets/gpx/32K Futangue Challenge 2024.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
+                  <a href="assets/kmz/32K_Futangue_Challenge_2024.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a> -->
                 </div>
                 <div class="modal-footer border-top-0">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -539,7 +541,7 @@
 
         <!-- 5 KM -->
         <div class="col-6 col-md-4 text-center py-3">
-          <button type="button" class="pb-2" data-toggle="modal" data-target="#">
+          <button type="button" class="pb-2" data-toggle="modal" data-target="#circuit_5k">
             <small>dificultad: baja</small><br>
             <div class="span-hero d-flex justify-content-center align-items-center">
               <strong class="py-0">5</strong><small>K</small>
@@ -548,14 +550,14 @@
               <strong>FAMILIAR</strong>
             </span>  
           </button>
-          <div class="modal fade" id="circuit_21k" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
+          <div class="modal fade" id="circuit_5k" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
               <div class="modal-content bg-green-dark-primary">
                 <div class="modal-body">
-                  <img src="assets/img/circuits/21k_futangue_ruta-900-v2.jpg" alt="" class="img-fluid" width="900" height="900">
-                  <a href="assets/img/circuits/21k_futangue_ruta-1500-v2.jpg" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
-                  <a href="assets/gpx/21K_Futangue_Challenge_2024.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
-                  <a href="assets/kmz/21K_Futangue_Challenge_2024.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a>
+                  <img src="assets/img/circuits/2025/FC25 - CIRCUITO 5K.png" alt="" class="img-fluid" width="900" height="900"><br>
+                  <a href="assets/img/circuits/2025/FC25 - CIRCUITO 5K.png" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
+                  <!-- <a href="assets/gpx/21K_Futangue_Challenge_2024.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
+                  <a href="assets/kmz/21K_Futangue_Challenge_2024.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a> -->
                 </div>
                 <div class="modal-footer border-top-0">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
