ajuste circuitos y logos de auspicios

--- a/index.html
+++ b/index.html
@@ -392,9 +392,9 @@
               <div class="modal-dialog modal-xl" role="document">
                 <div class="modal-content bg-green-dark-primary">
                   <div class="modal-body text-light pt-5">
-                    <img src="assets/img/circuits/2025/FC25 - CIRCUITO 37K.png" alt="Circuito 37K" class="img-fluid" width="1000" height="1000">
+                    <img src="assets/img/circuits/2025/sabado/37K_SABADO@3x.png" alt="Circuito 37K" class="img-fluid" width="1000" height="1000">
                     <br>
-                    <a href="assets/img/circuits/2025/FC25 - CIRCUITO 37K.png" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> 
+                    <a href="assets/img/circuits/2025/sabado/37K_SABADO@3x.png" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> 
                     <!--
                     <a href="assets/gpx/37k_FUTANGUE+CHALLENGE+2024_VF22.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
                     <a href="assets/kmz/37k_FUTANGUE_CHALLENGE_2024_VF22.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a> -->
@@ -425,8 +425,8 @@
               <div class="modal-dialog modal-xl" role="document">
                 <div class="modal-content bg-green-dark-primary">
                   <div class="modal-body">
-                    <img src="assets/img/circuits/2025/FC25 - CIRCUITO 26K.png" alt="" class="img-fluid" width="900" height="900"><br>
-                    <a href="assets/img/circuits/2025/FC25 - CIRCUITO 26K.png" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
+                    <img src="assets/img/circuits/2025/sabado/26K_SABADO@3x.png" alt="" class="img-fluid" width="900" height="900"><br>
+                    <a href="assets/img/circuits/2025/sabado/26K_SABADO@3x.png" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
                     <!-- <a href="assets/gpx/32K Futangue Challenge 2024.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
                     <a href="assets/kmz/32K_Futangue_Challenge_2024.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a> -->
                   </div>
@@ -456,8 +456,8 @@
               <div class="modal-dialog modal-xl" role="document">
                 <div class="modal-content bg-green-dark-primary">
                   <div class="modal-body">
-                    <img src="assets/img/circuits/2025/FC25 - CIRCUITO 18K.png" alt="" class="img-fluid" width="900" height="900"><br>
-                    <a href="assets/img/circuits/2025/FC25 - CIRCUITO 18K.png" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
+                    <img src="assets/img/circuits/2025/sabado/18K_SABADO@3x.png" alt="" class="img-fluid" width="900" height="900"><br>
+                    <a href="assets/img/circuits/2025/sabado/18K_SABADO@3x.png" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
                     <!-- <a href="assets/gpx/21K_Futangue_Challenge_2024.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
                     <a href="assets/kmz/21K_Futangue_Challenge_2024.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a> -->
                   </div>
@@ -496,8 +496,8 @@
             <div class="modal-dialog modal-xl" role="document">
               <div class="modal-content bg-green-dark-primary">
                 <div class="modal-body text-light pt-5">
-                  <img src="assets/img/circuits/2025/FC25 - CIRCUITO KV.png" alt="" class="img-fluid" width="900" height="900"><br>
-                  <a href="assets/img/circuits/2025/FC25 - CIRCUITO KV.png" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
+                  <img src="assets/img/circuits/2025/domingo/KV_DOMINGO.png" alt="" class="img-fluid" width="900" height="900"><br>
+                  <a href="assets/img/circuits/2025/domingo/KV_DOMINGO.png" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
                   <!-- <a href="assets/gpx/60k_FUTANGUE+CHALLENGE+2024_VF22.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
                   <a href="assets/kmz/60k_FUTANGUE_CHALLENGE_2024_VF22.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a> -->
                 </div>
@@ -525,8 +525,8 @@
             <div class="modal-dialog modal-xl" role="document">
               <div class="modal-content bg-green-dark-primary">
                 <div class="modal-body">
-                  <img src="assets/img/circuits/2025/FC25 - CIRCUITO 10K.png" alt="" class="img-fluid" width="900" height="900"><br>
-                  <a href="assets/img/circuits/2025/FC25 - CIRCUITO 10K.png" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
+                  <img src="assets/img/circuits/2025/domingo/10K_DOMINGO.png" alt="" class="img-fluid" width="900" height="900"><br>
+                  <a href="assets/img/circuits/2025/domingo/10K_DOMINGO.png" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
                   <!-- <a href="assets/gpx/32K Futangue Challenge 2024.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
                   <a href="assets/kmz/32K_Futangue_Challenge_2024.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a> -->
                 </div>
@@ -554,8 +554,8 @@
             <div class="modal-dialog modal-xl" role="document">
               <div class="modal-content bg-green-dark-primary">
                 <div class="modal-body">
-                  <img src="assets/img/circuits/2025/FC25 - CIRCUITO 5K.png" alt="" class="img-fluid" width="900" height="900"><br>
-                  <a href="assets/img/circuits/2025/FC25 - CIRCUITO 5K.png" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
+                  <img src="assets/img/circuits/2025/domingo/5K_DOMINGO.png" alt="" class="img-fluid" width="900" height="900"><br>
+                  <a href="assets/img/circuits/2025/domingo/5K_DOMINGO.png" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
                   <!-- <a href="assets/gpx/21K_Futangue_Challenge_2024.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
                   <a href="assets/kmz/21K_Futangue_Challenge_2024.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a> -->
                 </div>
@@ -638,11 +638,11 @@
 <footer id="contact" class="bg-green-dark-primary py-4" data-aos="fade-up">
   <div class="container">
     <div class="row text-white">
-      <div class="col-12 col-md-3 d-flex align-items-center justify-content-center">
+      <!-- <div class="col-12 col-md-3 d-flex align-items-center justify-content-center">
         <a href="index.html">
           <img src="assets/img/logofutangue.png" alt="" class="img-footer">
         </a>
-      </div>
+      </div> -->
 
       <div class="col-12 col-md-2 d-flex align-items-start justify-content-center">
         <div class="text-center">
@@ -656,7 +656,7 @@
         <div class="text-center">
           <br class="d-block d-md-none">
           <p class="h6">Media Partner:</p>
-          <img src="assets/img/sponsors/Logo-the-las-lap-Blanco380x100.png" alt="" class="img-sporthub img-fluid">
+          <img src="assets/img/sponsors/logo-the-last-lap.png" alt="" class="img-sporthub img-fluid">
         </div>
       </div>
 
@@ -666,16 +666,37 @@
           <p class="h6">Partnership:</p>
           <img src="assets/img/sponsors/logo-mountain-trail-co.png" alt="" class="img-sporthub img-fluid">
         </div>
+      </div>
+      <div class="col-6 col-md-2 d-flex align-items-center justify-content-center">
+        <div class="text-center">
+          <br class="d-block d-md-none">
+          <p class="h6">Fotografías Oficial:</p>
+          <img src="assets/img/sponsors/logo-focorace.png" alt="" class="img-sporthub img-fluid">
+        </div>
       </div>  
-      
-      <div class="col-12 col-md-2 d-flex align-items-center justify-content-center text-center mt-mobile">
+
+      <div class="col-6 col-md-2 d-flex align-items-center justify-content-center">
+        <div class="text-center">
+          <br class="d-block d-md-none">
+          <p class="h6">Hidratador Oficial:</p>
+          <img src="assets/img/sponsors/logo-gaterode.png" alt="" class="img-sporthub img-fluid">
+        </div>
+      </div> 
+      <div class="col-6 col-md-2 d-flex align-items-center justify-content-center">
+        <div class="text-center">
+          <br class="d-block d-md-none">
+          <p class="h6">Auto Oficial:</p>
+          <img src="assets/img/sponsors/logo-volkswagen.png" alt="" class="img-sporthub img-fluid">
+        </div>
+      </div>       
+      <!-- <div class="col-12 col-md-2 d-flex align-items-center justify-content-center text-center mt-mobile">
         <br class="d-block d-md-none">
         <a href="mailto:contacto@sporthub.cl?Subject=2020-FUTANGUE" class="contact h4 font-agenda-medium-italic">¡ Escríbenos !</a>
       </div>
 
       <div class="col-12 col-md-1 d-flex align-items-center icon-social justify-content-center">
         <a href="https://www.instagram.com/futangue_challenge/" class="btn px-3 py-2 btn--instagram" target="_blank"><i class="fab fa-instagram"></i></a>
-      </div>
+      </div> -->
       <!-- <div class="col mt-4">
         Power By
         <a href="https://www.timetrack.cl/" target="_blank"><img src="assets/img/sponsors/logo-timetrack-blanco.png" alt="" class="img-sporthub img-fluid"></a>
