--- a/index.html
+++ b/index.html
@@ -395,9 +395,9 @@
                     <img src="assets/img/circuits/2025/sabado/37K_SABADO@3x.png" alt="Circuito 37K" class="img-fluid" width="1000" height="1000">
                     <br>
                     <a href="assets/img/circuits/2025/sabado/37K_SABADO@3x.png" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> 
-                    <!--
-                    <a href="assets/gpx/37k_FUTANGUE+CHALLENGE+2024_VF22.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
-                    <a href="assets/kmz/37k_FUTANGUE_CHALLENGE_2024_VF22.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a> -->
+                    
+                    <a href="assets/gpx/2025/sabado/37K_FC.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a>
+                    <!--<a href="assets/kmz/37k_FUTANGUE_CHALLENGE_2024_VF22.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a> -->
                   </div>
                   <div class="modal-footer border-top-0">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -427,8 +427,8 @@
                   <div class="modal-body">
                     <img src="assets/img/circuits/2025/sabado/26K_SABADO@3x.png" alt="" class="img-fluid" width="900" height="900"><br>
                     <a href="assets/img/circuits/2025/sabado/26K_SABADO@3x.png" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
-                    <!-- <a href="assets/gpx/32K Futangue Challenge 2024.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
-                    <a href="assets/kmz/32K_Futangue_Challenge_2024.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a> -->
+                     <a href="assets/gpx/2025/sabado/25K_FC.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> 
+                    <!--<a href="assets/kmz/32K_Futangue_Challenge_2024.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a> -->
                   </div>
                   <div class="modal-footer border-top-0">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -458,8 +458,8 @@
                   <div class="modal-body">
                     <img src="assets/img/circuits/2025/sabado/18K_SABADO@3x.png" alt="" class="img-fluid" width="900" height="900"><br>
                     <a href="assets/img/circuits/2025/sabado/18K_SABADO@3x.png" class="text-light" target="_blank"><i class="fas fa-download"></i> Descargar Circuito</a> | 
-                    <!-- <a href="assets/gpx/21K_Futangue_Challenge_2024.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> | 
-                    <a href="assets/kmz/21K_Futangue_Challenge_2024.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a> -->
+                     <a href="assets/gpx/2025/sabado/17K_FC.gpx" class="text-light" target="_blank"><i class="fas fa-download"></i> GPX</a> 
+                    <!--<a href="assets/kmz/21K_Futangue_Challenge_2024.kmz" class="text-light" target="_blank"><i class="fas fa-download"></i> KMZ</a> -->
                   </div>
                   <div class="modal-footer border-top-0">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
