se agrego mapa de entrega kits

--- a/index.html
+++ b/index.html
@@ -323,14 +323,14 @@
               <p class="mr-date"><span class="text-green-light-primary"><b><i class="fa fa-calendar-check" aria-hidden="true"></i> FECHA:</b></span><br> Viernes 7 de febrero 2025</p>
               <p><span class="text-green-light-primary"><b><i class="fa fa-clock" aria-hidden="true"></i> HORARIO:</b></span><br> Entre las 14:00 y 20:00 horas.</p>
             </div>
-            <p><span class="text-green-light-primary"><b><i class="fa fa-map" aria-hidden="true"></i> LUGAR:</b></span><br> Por definir</p>
+            <p><span class="text-green-light-primary"><b><i class="fa fa-map" aria-hidden="true"></i> LUGAR:</b></span><br> <a href="https://maps.app.goo.gl/Y1nTNqcFZNDhxprx6" target="_blank">Recepción Parque Futangue</a></p>
           </div>
           <div class="col-12">
             <div class="border-green">
               <p>* Entrega especial de kit sábado 8 de febrero, sólo para las distancias <strong class="font-bold">KV - 10K - 5K</strong></p>
               <div class="d-flex">
                 <p class="mr-date"><span class="text-green-light-primary"><b><i class="fa fa-clock" aria-hidden="true"></i> HORARIO:</b></span><br> Entre las 14:00 y 19:00 horas.</p>
-                <p><span class="text-green-light-primary"><b><i class="fa fa-map" aria-hidden="true"></i> LUGAR:</b></span><br> Por definir</p>
+                <p><span class="text-green-light-primary"><b><i class="fa fa-map" aria-hidden="true"></i> LUGAR:</b></span><br> <a href="https://maps.app.goo.gl/Y1nTNqcFZNDhxprx6" target="_blank">Recepción Parque Futangue</a></p>
               </div>
             </div>
           </div>
