se agrego guuia tecnica

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         
         <div class="d-flex flex-column-reverse align-items-end align-items-md-end ">
           <a href="https://efluj.com/events/8-futangue-challengue-2025/terms" class="btn-info-futangue" target="_blank"><i class="fas fa-angle-double-right mr-2"></i> Descargar Reglamento</a>
-          <!-- <a href="https://f000.backblazeb2.com/file/ekp-apps/FUTANGUE_CHALLENGE_-_MANUAL_DEL_CORREDOR_24_v3.pdf" class="btn btn-inscription" target="_blank">Descargar Manual del Corredor</a> -->
+          <a href="assets/pdf/FC25_-_GUIA_TECNICA_V3.pdf" class="btn btn-inscription" target="_blank">Descargar Guía Técnica</a> 
         </div>
         <img src="assets/img/ramita.png" alt="" class="ramita">
       </div>
