--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
         <div class="text-center">
           <br class="d-block d-md-none">
           <p class="h6">Organiza y Produce:</p>
-          <img src="assets/img/sponsors/logo-sporthub-blanco.png" alt="" class="img-sporthub img-fluid">
+          <img src="assets/img/sponsors/Logo-SportHub.svg" alt="" class="img-sporthub img-fluid">
         </div>
       </div>
 
