Update contact links in index.html to use mailto for direct email access

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#contact">
+        <a class="nav-link" href="mailto:contacto@sporthub.cl">
           <i class="icon-contact"></i> Contacto
           <span class="sr-only">(current)</span>
         </a>
@@ -164,7 +164,7 @@
         </a>
       </li>
       <li class="nav-item text-center">
-        <a class="nav-link icon-contact mb-1 nav-link-custom-adjust" href="#contact">
+        <a class="nav-link icon-contact mb-1 nav-link-custom-adjust" href="mailto:contacto@sporthub.cl">
           <span class="span-a pt-2">Contacto</span> 
           <span class="sr-only">(current)</span>
         </a>
