nuevos circuitos y mejora logo de sponsor

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
   
           <!-- 38 KM -->
           <div class="col-6 col-md-4 text-center py-3">
-            <button type="button" class="pb-2" data-toggle="modal" data-target="#circuit_38k">
+            <a href="assets/circuits/CIRCUITO-FUTANGUE-2026-38K.pdf" target="_blank" class="pb-2" style="text-decoration: none; display: inline-block;">
               <small>dificultad: avanzada</small><br>
               <div class="span-hero d-flex justify-content-center align-items-center">
                 <strong>38</strong><small>K</small>
@@ -320,26 +320,13 @@
                 D
                 <strong class="distance-mas">+</strong>
               </span>
-            </button>
-            <div class="modal fade" id="circuit_38k" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog modal-xl" role="document">
-                <div class="modal-content bg-green-dark-primary">
-                  <div class="modal-body text-light pt-5">
-                    <p class="text-center">Próximamente: Mapa del circuito</p>
-                    <p class="text-center">Esta ruta está diseñada para corredores con amplia experiencia en trail running. Presenta exigencias técnicas, desniveles pronunciados y tramos de alta resistencia, ideales para quienes buscan un verdadero desafío en la montaña.</p>
-                  </div>
-                  <div class="modal-footer border-top-0">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                  </div>
-                </div>
-              </div>
-            </div>
+            </a>
           </div>
   
   
           <!-- 21 KM -->
           <div class="col-6 col-md-4 text-center py-3">
-            <button type="button" class="pb-2" data-toggle="modal" data-target="#circuit_21k">
+            <a href="assets/circuits/CIRCUITO-FUTANGUE-2026-21K.pdf" target="_blank" class="pb-2" style="text-decoration: none; display: inline-block;">
               <small>dificultad: media</small><br>
               <div class="span-hero d-flex justify-content-center align-items-center">
                 <strong>21</strong><small>K</small>
@@ -349,26 +336,13 @@
                 D
                 <strong class="distance-mas">+</strong>
               </span>  
-            </button>
-            <div class="modal fade" id="circuit_21k" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog modal-xl" role="document">
-                <div class="modal-content bg-green-dark-primary">
-                  <div class="modal-body text-light pt-5">
-                    <p class="text-center">Próximamente: Mapa del circuito</p>
-                    <p class="text-center">Esta ruta está pensada para corredores que están comenzando en el trail running y buscan un desafío moderado. Combina tramos accesibles con secciones que requieren mayor esfuerzo, ofreciendo una experiencia equilibrada entre iniciación y superación.</p>
-                  </div>
-                  <div class="modal-footer border-top-0">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                  </div>
-                </div>
-              </div>
-            </div>
+            </a>
           </div>
   
   
           <!-- 10 KM -->
           <div class="col-6 col-md-4 text-center py-3">
-            <button type="button" class="pb-2" data-toggle="modal" data-target="#circuit_10k">
+            <a href="assets/circuits/CIRCUITO-FUTANGUE-2026-10K.pdf" target="_blank" class="pb-2" style="text-decoration: none; display: inline-block;">
               <small>dificultad: baja</small><br>
               <div class="span-hero d-flex justify-content-center align-items-center">
                 <strong class="py-0">10</strong><small>K</small>
@@ -378,25 +352,12 @@
                 D
                 <strong class="distance-mas">+</strong>
               </span>  
-            </button>
-            <div class="modal fade" id="circuit_10k" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog modal-xl" role="document">
-                <div class="modal-content bg-green-dark-primary">
-                  <div class="modal-body text-light pt-5">
-                    <p class="text-center">Próximamente: Mapa del circuito</p>
-                    <p class="text-center"><strong>CROSS:</strong> Esta ruta es ideal para todo tipo de competidores, incluyendo corredores de calle que buscan dar el salto al trail. El circuito es poco técnico, con tramos accesibles que privilegian la acción, la conexión con la naturaleza y el desarrollo de la resistencia.</p>
-                  </div>
-                  <div class="modal-footer border-top-0">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                  </div>
-                </div>
-              </div>
-            </div>
+            </a>
           </div>
 
           <!-- 5 KM -->
           <div class="col-6 col-md-4 text-center py-3">
-            <button type="button" class="pb-2" data-toggle="modal" data-target="#circuit_5k">
+            <a href="assets/circuits/CIRCUITO-FUTANGUE-2026-5K.pdf" target="_blank" class="pb-2" style="text-decoration: none; display: inline-block;">
               <small>dificultad: baja</small><br>
               <div class="span-hero d-flex justify-content-center align-items-center">
                 <strong class="py-0">5</strong><small>K</small>
@@ -406,25 +367,12 @@
                 D
                 <strong class="distance-mas">+</strong>
               </span>  
-            </button>
-            <div class="modal fade" id="circuit_5k" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog modal-xl" role="document">
-                <div class="modal-content bg-green-dark-primary">
-                  <div class="modal-body text-light pt-5">
-                    <p class="text-center">Próximamente: Mapa del circuito</p>
-                    <p class="text-center"><strong>FAMILIAR:</strong> Esta ruta está diseñada para disfrutar en familia durante todo el recorrido. Es apta tanto para niños como para adultos, e ideal para quienes están dando sus primeros pasos en el mundo del running o del trail running.</p>
-                  </div>
-                  <div class="modal-footer border-top-0">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                  </div>
-                </div>
-              </div>
-            </div>
+            </a>
           </div>
 
           <!-- 2 KM -->
           <div class="col-6 col-md-4 text-center py-3">
-            <button type="button" class="pb-2" data-toggle="modal" data-target="#circuit_2k">
+            <a href="assets/circuits/CIRCUITO-FUTANGUE-2026-2K-kids.pdf" target="_blank" class="pb-2" style="text-decoration: none; display: inline-block;">
               <small>dificultad: baja</small><br>
               <div class="span-hero d-flex justify-content-center align-items-center">
                 <strong class="py-0">2</strong><small>K</small>
@@ -434,20 +382,7 @@
                 D
                 <strong class="distance-mas">+</strong>
               </span>  
-            </button>
-            <div class="modal fade" id="circuit_2k" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog modal-xl" role="document">
-                <div class="modal-content bg-green-dark-primary">
-                  <div class="modal-body text-light pt-5">
-                    <p class="text-center">Próximamente: Mapa del circuito</p>
-                    <p class="text-center"><strong>KIDS:</strong> El circuito KIDS de 2 kilómetros está diseñado especialmente para que los más pequeños vivan la emoción del trail running en un entorno seguro, natural y lleno de aventura. Senderos suaves, con tramos de tierra compacta, pequeñas subidas y bajadas que invitan a explorar sin exigir demasiado.</p>
-                  </div>
-                  <div class="modal-footer border-top-0">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                  </div>
-                </div>
-              </div>
-            </div>
+            </a>
           </div>
       </div>
     </div>
@@ -533,7 +468,7 @@
         <div class="text-center">
           <br class="d-block d-md-none">
           <p class="h6">Organiza y Produce:</p>
-          <img src="assets/img/sponsors/Logo-SportHub.svg" alt="" class="img-sporthub img-fluid">
+          <img src="assets/img/sponsors/Logo-SportHub.svg" alt="Logo SportHub" class="img-sporthub img-fluid">
         </div>
       </div>
 
@@ -541,7 +476,7 @@
         <div class="text-center">
           <br class="d-block d-md-none">
           <p class="h6">Media Partner:</p>
-          <img src="assets/img/sponsors/logo-the-last-lap.png" alt="" class="img-sporthub img-fluid">
+          <img src="assets/img/sponsors/Logo-TheLastLap.svg" alt="Logo The Last Lap" class="img-sporthub img-fluid">
         </div>
       </div>
 
@@ -549,14 +484,14 @@
         <div class="text-center">
           <br class="d-block d-md-none">
           <p class="h6">Auspicia:</p>
-          <img src="assets/img/sponsors/LOGO-ASICS.png" alt="" class="img-sporthub img-fluid">
+          <img src="assets/img/sponsors/Logo-Asics.svg" alt="Logo Asics" class="img-sporthub img-fluid">
         </div>
       </div>
       <div class="col-6 col-md-2 d-flex align-items-center justify-content-center">
         <div class="text-center">
           <br class="d-block d-md-none">
           <p class="h6">Fotografías Oficial:</p>
-          <img src="assets/img/sponsors/logo-focorace.png" alt="" class="img-sporthub img-fluid">
+          <img src="assets/img/sponsors/FOTO_OFICIAL-FOCO_RACE.svg" alt="Logo foco race" class="img-sporthub img-fluid">
         </div>
       </div>  
 
@@ -573,7 +508,7 @@
         <div class="text-center">
           <br class="d-block d-md-none">
           <p class="h6">Auto Oficial:</p>
-          <img src="assets/img/sponsors/logo-volkswagen.png" alt="" class="img-sporthub img-fluid">
+          <img src="assets/img/sponsors/Logo-VW.svg" alt="Logo Volkswagen" class="img-sporthub img-fluid">
         </div>
       </div>       
       
